Java 9 Float.valueOf